# CAlgorithms

./: .gitignore  CMakeLists.txt  floating_point_digits.c  floating_point_digits.h  main.c
FundamentalMath/Matrixes/: diagonal_matrix.c  diagonal_matrix.h  spiral_matrix.c  spiral_matrix.h
FundamentalMath/PrimeNumbers/: eratosten.c  eratosten.h
